# drug-data-pipeline

./: .gitignore  Makefile  POUR_ALLER_PLUS_LOIN.md  README.md  config.py  nohup.out  pyproject.toml  pytest.ini  requirements.txt
.github/: python-app.yml
.github/workflows/: python-app.yml
airflow/: airflow.cfg  airflow.db
airflow/dags/: data_pipeline_dag.py
dags/: data_pipeline_dag.py
myvenv/: pyvenv.cfg
sql_queries/: query_1  query_2
src/: config.py  main.py
src/ad_hoc/: ad_hoc.py
src/data_extract/: extract.py
src/data_load/: load.py
src/data_transform/: data_cleaning.py  data_processing.py  drug_mentions.py  relationships.py
src/data_transform/utils/: utils.py
src/output/ad_hoc/: most_mentioned_journal.json
src/output/link_graph/: drug_mentions_graph.json
tests/: config.py
tests/test_data/: clinical_trials.csv  drugs.csv  pubmed.csv  pubmed.json
tests/unit/: test_data_cleaning.py  test_data_processing.py  test_data_transform_utils.py  test_drug_mentions.py  test_extract.py  test_load.py  test_relationships.py  test_transform.py
